@@ -59,7 +59,7 @@ $g = array(
 	"www_path" => "/usr/local/www",
 	"xml_rootobj" => "nas4free",
 	"debug" => false,
-	"latest_config" => "1.2",
+	"latest_config" => "1.3",
 	"nopccard_platforms" => array("wrap", "net48xx"),
 	"wireless_regex" => "/^(ndis|wi|ath|an|ral|ural|wai|iwi|awi|wlan|ipw|wpi|rum|arl|zyd)/",
 	"default_passwd" => "nas4free",
